3-volumes/dp-conv-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conv-api
spec:
  replicas: 1
  selector:
    matchLabels:
      components: conv-api
  template:
    metadata:
      labels:
        components: conv-api
    spec:
      containers:
      - name: conv-api
        image: antonlarichev/conv-api:1.0
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
        volumeMounts:
          - name: conv-api-data
            mountPath: /opt/app/uploads
      volumes:
        - name: conv-api-data
          persistentVolumeClaim:
            claimName: pvc-conv-api
