3-volumes/dp-converter.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      components: convenrter
  template:
    metadata:
      labels:
        components: convenrter
    spec:
      containers:
      - name: convenrter
        image: antonlarichev/conv-service:1.0
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "1024Mi"
