3-volumes/svc-conv-api.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-conv-api
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
  selector:
    components: conv-api
