3-volumes/svc-conv-app.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-conv-app
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    components: conv-app
