3-volumes/svc-converter.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-converter
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    components: converter
