3-volumes/svc-rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-rabbitmq
spec:
  type: ClusterIP
  ports:
    - port: 5672
  selector:
    components: rabbitmq
