3-volumes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: converter-app
#  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: conv.test
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: svc-conv-app
            port:
              number: 80
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: svc-conv-api
            port:
              number: 3000
